--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ env:
   LLVM_VER: ${{ vars.LLVM_VER }}
   LLVM_VER_DEFAULT: 20
   NINJA_STATUS: '[%f/%t %e %r]'
-  SF_PW_MAPPED: ${{ secrets.SF_PW }}
-  SF_USER_MAPPED: ${{ secrets.SF_USER }}
+  # SF_PW_MAPPED: ${{ secrets.SF_PW }}
+  # SF_USER_MAPPED: ${{ secrets.SF_USER }}
   VC_LTL_VER: ${{ vars.VC_LTL_VER }}
 
 jobs:
@@ -645,12 +645,12 @@ jobs:
       with:
         name: FFmpeg.xcframework-${{ env.FF_VERSION }}-lite
         path: FFmpeg.xcframework-${{ env.FF_VERSION }}-lite.tar.xz
-    - name: Upload to SourceForge
-      if: (github.event_name != 'pull_request')
-      shell: bash
-      run:  |
-        brew install hudochenkov/sshpass/sshpass
-        sshpass -p $SF_PW_MAPPED scp -o StrictHostKeyChecking=no FFmpeg.xcframework-${{ env.FF_VERSION }}-lite.tar.xz $SF_USER_MAPPED,avbuild@frs.sourceforge.net:/home/frs/project/a/av/avbuild/xcframework/
+    # - name: Upload to SourceForge
+    #   if: (github.event_name != 'pull_request')
+    #   shell: bash
+    #   run:  |
+    #     brew install hudochenkov/sshpass/sshpass
+    #     sshpass -p $SF_PW_MAPPED scp -o StrictHostKeyChecking=no FFmpeg.xcframework-${{ env.FF_VERSION }}-lite.tar.xz $SF_USER_MAPPED,avbuild@frs.sourceforge.net:/home/frs/project/a/av/avbuild/xcframework/
 
 
   Upload:
@@ -677,15 +677,15 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: ffmpeg-${{ env.FF_VERSION }}-uwp-VS2022lite
-    - name: Upload to SourceForge
-      if: (github.event_name != 'pull_request')
-      shell: bash
-      run:  |
-        sudo apt update
-        sudo apt install -y sshpass
-        FFV=${{ env.FF_VERSION }}
-        for f in `ls ffmpeg-*.7z`; do
-          OS=${f%%-vs*}
-          OS=${OS##*${FFV}-}
-          sshpass -p $SF_PW_MAPPED scp -o StrictHostKeyChecking=no $f $SF_USER_MAPPED,avbuild@frs.sourceforge.net:/home/frs/project/a/av/avbuild/$OS
-        done
+    # - name: Upload to SourceForge
+    #   if: (github.event_name != 'pull_request')
+    #   shell: bash
+    #   run:  |
+    #     sudo apt update
+    #     sudo apt install -y sshpass
+    #     FFV=${{ env.FF_VERSION }}
+    #     for f in `ls ffmpeg-*.7z`; do
+    #       OS=${f%%-vs*}
+    #       OS=${OS##*${FFV}-}
+    #       sshpass -p $SF_PW_MAPPED scp -o StrictHostKeyChecking=no $f $SF_USER_MAPPED,avbuild@frs.sourceforge.net:/home/frs/project/a/av/avbuild/$OS
+    #     done
