--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,8 +70,8 @@ jobs:
       shell: bash
       run: |
         export FFSRC=$PWD/ffmpeg-${FF_VERSION}
-        [[ "${TARGET_OS}" == "iOS" || "${TARGET_OS}" == "tvOS"* || "${TARGET_OS}" == "xr"* || "${TARGET_OS}" == "vision"* ]]  && export USER_OPT="--enable-wolfssl"
-        [[ "${TARGET_OS}" == "macOS" ]] && export USER_OPT="--enable-libshaderc"
+        [[ "${TARGET_OS}" == "iOS" || "${TARGET_OS}" == "tvOS"* || "${TARGET_OS}" == "xr"* || "${TARGET_OS}" == "vision"* ]]  && export USER_OPT="--enable-wolfssl --enable-protocol=videosafe"
+        [[ "${TARGET_OS}" == "macOS" ]] && export USER_OPT="--enable-libshaderc  --enable-protocol=videosafe"
         ./avbuild.sh ${TARGET_OS}
     - name: Make SDK
       shell: bash
@@ -194,7 +194,7 @@ jobs:
     - name: Configure and Build
       shell: cmd
       env:
-        USER_OPT: --enable-libshaderc
+        USER_OPT: --enable-libshaderc --enable-protocol=videosafe
         if: ${{ matrix.target != 'uwp' }}
       run: |
         7z x -y dep.7z -otools
@@ -277,7 +277,7 @@ jobs:
         set HOME=%CD%
         set FFSRC=%CD%\ffmpeg-%FF_VERSION%
         set BUILD_NOW=true
-        set USER_OPT=--enable-libshaderc
+        set USER_OPT=--enable-libshaderc --enable-protocol=videosafe
         tools\vcbuild.bat VS2022 %TARGET_OS%10 all
     - name: Make SDK
       shell: cmd
@@ -388,7 +388,7 @@ jobs:
         export FFSRC=$PWD/ffmpeg-${FF_VERSION}
         export WindowsSdkDir=${WINDOWSSDKDIR}
         export WindowsSDKVersion=$(cat ${WINDOWSSDKDIR}/.version)
-        export USER_OPT="--enable-libshaderc"
+        export USER_OPT="--enable-libshaderc --enable-protocol=videosafe"
         USE_TOOLCHAIN=clang-${LLVM_VER:-$LLVM_VER_DEFAULT} ./avbuild.sh $TARGET_OS "arm64 x86 x64"
     - name: Make SDK
       shell: bash
@@ -518,7 +518,7 @@ jobs:
       run: |
         export FFSRC=$PWD/ffmpeg-${FF_VERSION}
         export SYSROOT=/tmp/sysroot
-        export USER_OPT="--enable-wolfssl --enable-libshaderc"
+        export USER_OPT="--enable-wolfssl --enable-libshaderc --enable-protocol=videosafe"
         USE_TOOLCHAIN=clang-${LLVM_VER:-$LLVM_VER_DEFAULT} ./avbuild.sh linux "amd64 arm64 armhf"
     - name: Make SDK
       shell: bash
@@ -556,7 +556,7 @@ jobs:
       run: |
         export ANDROID_NDK=$ANDROID_NDK_LATEST_HOME
         export FFSRC=$PWD/ffmpeg-${FF_VERSION}
-        export USER_OPT="--enable-wolfssl"
+        export USER_OPT="--enable-wolfssl --enable-protocol=videosafe"
         ./avbuild.sh ${TARGET_OS} "armv7 x86"
         mv sdk-android-clang{,32}
     - name: Configure and Build 64bit
@@ -564,7 +564,7 @@ jobs:
       run: |
         export ANDROID_NDK=$ANDROID_NDK_LATEST_HOME
         export FFSRC=$PWD/ffmpeg-${FF_VERSION}
-        export USER_OPT="--enable-wolfssl"
+        export USER_OPT="--enable-wolfssl --enable-protocol=videosafe"
         ./avbuild.sh ${TARGET_OS} "arm64 x86_64"
         rsync -auv --ignore-existing  sdk-android-clang{32/*,}
         rm -rf sdk-android-clang32
